# Manus-AI

./: .dockerignore  .env.example  .env.production.example  .gitignore  .replit  Caddyfile  Clinical_Nutrition_Master_Textbook.docx  Dockerfile  README.dev.md  README.md  build_book_merge_ready.py  build_clean_manuscript_final.py  build_final_book_merge.py  build_final_book_ready.py  build_final_clean_manuscript_v2.py  build_typst_book.py  build_ultra_clean_merge.py  build_ultra_final_manuscript.py  clean_docx_artifacts.py  clean_docx_artifacts_v2.py  clean_docx_artifacts_v3.py  dev-stop.bat  dev.bat  docker-compose.yml  extract_and_clean.py  final_clean_part01.py  firebase-applet-config.json  firebase-blueprint.json  firestore.rules  index.html  merge_master_textbook.py  package-lock.json  package.json  pdf_to_clean_docx.py  pyproject.toml  replit.md  semantic_tagger.py  tab-1_merged.docx  textbook_part_01_final_clean.docx  textbook_part_01_ultra_clean.docx  (+1 more)
attached_assets/: Pasted-Add-these-missing-product-requirements-to-the-platform-_1774373102165.txt  Pasted-PS-C-Users-kkbae-Downloads-Manus-AI-Manus-AI-cd-backend_1774516270103.txt  Pasted-PS-C-Users-kkbae-Downloads-Manus-AI-Manus-AI-cp-env-exa_1774516259689.txt  Pasted-This-website-is-designed-to-convert-large-PDF-files-con_1774430920993.txt  Pasted-You-are-a-senior-full-stack-engineer-backend-architect-_1774371085982.txt  tab-1_merged_(2)_1774430413804.docx  tab-1_merged_(3)_1774519417998.docx  textbook_part_01_(1)_1774397230473.docx
backend/: .env.example  alembic.ini  requirements.txt  start.sh
src/: App.tsx
(+257 files in other folders)
